--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About the Author</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
