added header and footer tags to index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+<header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About the Author</a></li>
+        </ul>
+    </nav>
+</header>
 <h1> Welcome to my Website!</h1>
 
 <h2>This is the first website created on my own</h2>
@@ -37,6 +45,13 @@
     integer quis auctor elit.
     Pretium lectus quam id leo in vitae turpis massa.</p>
 
-<a href="about.html">About the Author</a>
+<footer>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About the Author</a></li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
