--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+
+<div id="content">
 <header>
     <nav>
         <ul>
@@ -19,7 +21,7 @@
 
 <h2>This is the first website created on my own</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+<p id="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Turpis massa sed elementum tempus egestas sed sed risus pretium.
     Nunc faucibus a pellentesque sit amet. Amet nisl suscipit adipiscing bibendum est ultricies integer.
@@ -32,7 +34,7 @@
     integer quis auctor elit.
     Pretium lectus quam id leo in vitae turpis massa.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+<p id="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Turpis massa sed elementum tempus egestas sed sed risus pretium.
     Nunc faucibus a pellentesque sit amet. Amet nisl suscipit adipiscing bibendum est ultricies integer.
@@ -53,5 +55,6 @@
         </ul>
     </nav>
 </footer>
+</div>
 </body>
 </html>
