--- a/about.html
+++ b/about.html
@@ -7,13 +7,23 @@
 </head>
 
 <body>
+<div id="content">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About the Author</a></li>
+            </ul>
+        </nav>
+    </header>
+
 <h1> About the Author</h1>
 
 <h2>Jose De La Espriella</h2>
 
 <img src="IMG_0986.jpeg" alt="Image not loaded">
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+<p id="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Turpis massa sed elementum tempus egestas sed sed risus pretium.
     Nunc faucibus a pellentesque sit amet. Amet nisl suscipit adipiscing bibendum est ultricies integer.
@@ -26,7 +36,7 @@
     integer quis auctor elit.
     Pretium lectus quam id leo in vitae turpis massa.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+<p id="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Turpis massa sed elementum tempus egestas sed sed risus pretium.
     Nunc faucibus a pellentesque sit amet. Amet nisl suscipit adipiscing bibendum est ultricies integer.
@@ -40,7 +50,14 @@
     Pretium lectus quam id leo in vitae turpis massa.</p>
 
 
-<a href="index.html">Back to Home</a>
-
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About the Author</a></li>
+            </ul>
+        </nav>
+    </footer>
+</div>
 </body>
 </html>
